[metadata]
# See https://packaging.python.org/guides/distributing-packages-using-setuptools/#setup-args
name = devops-package
version = 0.0.1
description = Template project for Python
long_description = file: README.md
url = https://github.com/jphppd/devops-python
author = jphppd
author_email = exampe@domain.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: French
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords = template skel

[options]
zip_safe = false
include_package_data = true
packages = find:
python_requires = >=3.5
install_requires =
    pyyaml >= 5.3.1

[options.extras_require]
dev =
    pytest
    pytest-cov
    pre-commit
    check-manifest
    zest.releaser[recommended]

[zest.releaser]
version-levels = 3
release = no
no-input = yes
push-changes = false
prereleaser.middle = setup.prereleaser_set_commit_msg
postreleaser.middle = setup.postrealeaser_set_commit_msg

[distutils]
index-servers =

[tool:pytest]
addopts =
    --showlocals
    --cov=.

[coverage:run]
omit =
    tests/*
    setup.py

[coverage:report]
show_missing = true
