[metadata]
name = my_devops_package
version = 0.0.1
description = Template project for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jphppd/devops-python
author = jphppd
author_email = exampe@domain.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = template skel

[options]
packages = find:
install_requires =
    pyyaml>=5.3.1
python_requires = >=3.5
include_package_data = true
zip_safe = false

[options.extras_require]
dev =
    check-manifest
    pre-commit
    pylint
    pytest
    pytest-cov
    zest.releaser[recommended]

[options.packages.find]
exclude =
    docs
    docs.*
    tests
    tests.*

[zest.releaser]
version-levels = 3
release = no
no-input = yes
push-changes = false
prereleaser.middle = setup.prereleaser_set_commit_msg
postreleaser.middle = setup.postrealeaser_set_commit_msg

[tool:pytest]
addopts =
    --showlocals
    --cov=.

[coverage:run]
omit =
    tests/*
    setup.py

[coverage:report]
show_missing = true
